--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Delight VR Example</title>
-  <script src="//cdn.delight-vr.com/latest/dl8-453aae8dae7ed4e488bbc5438aa622e671c16325.js" async></script>
+  <title>hello</title>
 </head>
 <body>
-  <dl8-img
-    title="Test Image"
-    author="Delight VR"
-    poster="https://delight-vr.com/examples/test-image-poster.jpg"
-    src="https://delight-vr.com/examples/test-image.jpg"
-    display-mode="inline"
-    format="STEREO_360_TB">
-  </dl8-img>
+  hi
 </body>
 </html>
