--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <button type="button" onclick="window.close();">close</button>
+    <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">close</button>
 </body>
 </html>
