--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <button type="button" onclick="window.close();">close</button>
-    <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">close</button>
+    <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">redirect</button>
     <button type="button" onclick="window.webkit.messageHandlers.Share.postMessage({title:'its title',content:'its content',url:'http://www.baidu.com'});">post message</button>
     <button type="button" onclick="window.webkit.messageHandlers.ScanAction.postMessage(null);">simple send</button>
 </body>
