--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
   <title>hello</title>
+  <script>
+    function foo {
+      let auth = {
+        homeURL: "home url",
+        authURL: "auth url",
+        title: "title",
+        webToken: "web token",
+        likesURL: "likes url",
+        videosURL: "videos url",
+        mobileTokenURL: "mobile token",
+      };
+
+      return encodeURIComponent(JSON.stringify(auth));
+    }
+  </script>
 </head>
 <body>
     <button type="button" onclick="window.close();">close</button>
     <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">redirect</button>
-    <button type="button" onclick="window.webkit.messageHandlers.Share.postMessage({title:'its title',content:'its content',url:'http://www.baidu.com'});">post message</button>
-    <button type="button" onclick="window.webkit.messageHandlers.ScanAction.postMessage(null);">simple send</button>
+    <button type="button" onclick="window.webkit.messageHandlers.sendAuthData.postMessage(foo());">post message</button>
+    <button type="button" onclick="window.webkit.messageHandlers.close.postMessage(null);">simple send</button>
 </body>
 </html>
