--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
       return encodeURIComponent(JSON.stringify(auth));
     }
   </script>
+  <style>
+    .center {
+      padding: 70px 0;
+      border: 3px solid green;
+    }
+</style>
 </head>
 <body>
-    <button type="button" onclick="window.close();">close</button>
-    <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">redirect</button>
-    <button type="button" onclick="window.webkit.messageHandlers.sendAuthData.postMessage(foo());">post message</button>
-    <button type="button" onclick="window.webkit.messageHandlers.close.postMessage(null);">simple send</button>
+    <div class="center">
+        <button type="button" onclick="window.close();">close</button>
+        <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">redirect</button>
+        <button type="button" onclick="window.webkit.messageHandlers.sendAuthData.postMessage(foo());">post message</button>
+        <button type="button" onclick="window.webkit.messageHandlers.close.postMessage(null);">simple send</button>
+    </div>
 </body>
 </html>
