--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
       return encodeURIComponent(JSON.stringify(auth));
     }
+
+    function go {
+      console.log("hi");
+      console.log(foo());
+      window.webkit.messageHandlers.sendAuthData.postMessage(foo());
+    }
   </script>
   <style>
     .center {
@@ -28,7 +34,7 @@
     <div class="center">
         <button type="button" onclick="window.close();">close</button>
         <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">redirect</button>
-        <button type="button" onclick="window.webkit.messageHandlers.sendAuthData.postMessage(foo());">post message</button>
+        <button type="button" onclick="go();">post message</button>
         <button type="button" onclick="window.webkit.messageHandlers.close.postMessage(null);">simple send</button>
     </div>
 </body>
