--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="center">
         <button type="button" onclick="window.close();">close</button>
         <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">redirect</button>
-        <button type="button" onclick="go();">post message</button>
+        <button type="button" onclick="go()">post message</button>
         <button type="button" onclick="window.webkit.messageHandlers.close.postMessage(null);">simple send</button>
     </div>
 </body>
