fix function error

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>hello</title>
   <script>
-    function foo {
+    function foo() {
       let auth = {
         homeURL: "home url",
         authURL: "auth url",
@@ -17,7 +17,7 @@
       return encodeURIComponent(JSON.stringify(auth));
     }
 
-    function go {
+    function go() {
       console.log("hi");
       console.log(foo());
       window.webkit.messageHandlers.sendAuthData.postMessage(foo());
@@ -34,7 +34,7 @@
     <div class="center">
         <button type="button" onclick="window.close();">close</button>
         <button type="button" onclick="window.location = 'callback://somehost?greeting=hello'">redirect</button>
-        <button type="button" onclick="go();">post message</button>
+        <button type="button" onclick="go()">post message</button>
         <button type="button" onclick="window.webkit.messageHandlers.close.postMessage(null);">simple send</button>
     </div>
 </body>
